force-app/main/default/objects/RelatorioHorasFaturar__c/RelatorioHorasFaturar__c.object-meta.xml
<CustomObject>
    <label>Relatório de Horas a Faturar</label>
    <nameField>
        <displayFormat>RHF-{00000}</displayFormat>
        <label>Nome do Relatório</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relatórios de Horas a Faturar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>