force-app/main/default/objects/RelatorioHorasFaturar__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relatórios de Horas a Faturar</relationshipLabel>
    <relationshipName>RelatoriosHorasFaturar</relationshipName>
    <type>Lookup</type>
</CustomField>