force-app/main/default/objects/RelatorioHorasFaturar__c/fields/FranquiaPrevista__c.field-meta.xml
<CustomField>
    <fullName>FranquiaPrevista__c</fullName>
    <label>Franquia Prevista</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>