force-app/main/default/objects/RelatorioHorasFaturar__c/fields/HorasAFaturar__c.field-meta.xml
<CustomField>
    <fullName>HorasAFaturar__c</fullName>
    <label>Horas a Faturar</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>