force-app/main/default/objects/RelatorioHorasFaturar__c/fields/HorasLancadas__c.field-meta.xml
<CustomField>
    <fullName>HorasLancadas__c</fullName>
    <label>Horas Lançadas</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>