force-app/main/default/objects/RelatorioHorasFaturar__c/fields/MesReferencia__c.field-meta.xml
<CustomField>
    <fullName>MesReferencia__c</fullName>
    <label>Mês de Referência</label>
    <type>Date</type>
</CustomField>