force-app/main/default/objects/RelatorioHorasFaturar__c/fields/Servico__c.field-meta.xml
<CustomField>
    <fullName>Servico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serviço</label>
    <referenceTo>Servico__c</referenceTo>
    <relationshipLabel>Relatórios de Horas a Faturar</relationshipLabel>
    <relationshipName>RelatoriosHorasFaturar</relationshipName>
    <type>Lookup</type>
</CustomField>