force-app/main/default/objects/RelatorioHorasFaturar__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Ajuste</fullName>
                <default>true</default>
                <label>Em Ajuste</label>
            </value>
            <value>
                <fullName>Aguardando Cliente</fullName>
            </value>
            <value>
                <fullName>Pronto p/ Financeiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>